@@ -754,7 +754,7 @@ enum
 { 
 	emuITEMPERSEG, emuGRIDCOLLISION, emuOLDTRIBBLES, emu190LINKSPRITES, emuCOPYSWIMSPRITES, emu210WINDROBES,
 	emu250DMAPINTOREPEAT, emuFIXTRIFORCECELLAR, emuNOFLIPFIRETRAIL, emuSWORDTRIGARECONTINUOUS, emu8WAYSHOTSFX, emu210BOMBCHU, 
-	emuEPILEPSY, emuBUGGYNEXTCOMBOS, emuOLD210WATER,
+	emuEPILEPSY, emuBUGGYNEXTCOMBOS, emuOLD210WATER, emu210HAMMER,
 	emuLAST
 		
 };
