@@ -2,6 +2,11 @@ ChangeLog for 2.53.1
 
 //Beta 52
 
+Added an eulation flag '2.10 Hammer Upward Reach' that extends
+	the vertical reach of the Hamer weapon by four pixels 
+	when the player is facing up. 
+	( ZoriaRPG, 12th June, 2020 )
+
 Implemented a request from ShadowTiger, whereby when you edit a
 	DMap, and select a map tile, when you go to edit further
 	DMap map tiles within the same session, the DMap editor will
